--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!--Navbar-->
     <nav class="navbar navbar-dark bg-dark">
         <div class="container-fluid">
-            <h1 class="text-light"><i class="fa fa-blind"></i> Path Finding Visualizer</h1>
+            <h1 class="text-light"><i class="fa fa-blind"></i> AlgoVis</h1>
         </div>
     </nav>
 
@@ -144,7 +144,7 @@
         <div class="container">
             <div class="row text-center">
                 <div class="col-12 ">
-                    <h3>Path Visualizer</h3>
+                    <h3>AlgoVis</h3>
                 </div>
                 <div class="col-12 mt-2">
                     <i class="mx-2 fa fa-2x fa-instagram "></i>
